change TextureBuf size to 4 modify cmake send

--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -142,11 +142,11 @@ if(NOT BUILD_SELF)
         add_dependencies(${VPK_NAME} ${VPK_NAME}-vpk ${ARC_TAG})
     endif()
 
-    if(DEFINED ENV{PSVITAIP} AND NOT BUILD STREQUAL "All")
-        add_custom_target(send COMMAND curl -T ${EBOOT_NAME} "ftp://$ENV{PSVITAIP}:1337/ux0:/app/${SFO_TITLE_ID}/eboot.bin")
+    if(NOT BUILD STREQUAL "All")
+        add_custom_target(send COMMAND curl -T ${EBOOT_NAME} "ftp://\${PSVITAIP}:1337/ux0:/app/${SFO_TITLE_ID}/eboot.bin")
         add_dependencies(send ${VPK_NAME})
 
-        add_custom_target(sendvpk COMMAND curl -T ${OUT_PATH}/${VPK_NAME} "ftp://$ENV{PSVITAIP}:1337/ux0:")
+        add_custom_target(sendvpk COMMAND curl -T ${OUT_PATH}/${VPK_NAME} "ftp://\${PSVITAIP}:1337/ux0:")
         add_dependencies(sendvpk ${VPK_NAME})
     endif()
 endif()
