--- a/arch/CMakeLists.txt
+++ b/arch/CMakeLists.txt
@@ -142,8 +142,8 @@ else()
     add_dependencies(VPK_${APP_NAME} ${VPK_NAME}-vpk ${ARC_TAG})
 endif()
 
-add_custom_target(send COMMAND curl -T ${EBOOT_NAME} " ftp://$ENV{PSVITAIP}:1337/ux0:/app/${SFO_TITLE_ID}/eboot.bin ")
+add_custom_target(send COMMAND curl -T ${EBOOT_NAME} " ftp://\${PSVITAIP}:1337/ux0:/app/${SFO_TITLE_ID}/eboot.bin ")
 add_dependencies(send VPK_${APP_NAME})
 
-add_custom_target(sendvpk COMMAND curl -T ${OUT_PATH}/${VPK_NAME} " ftp://$ENV{PSVITAIP}:1337/ux0: ")
+add_custom_target(sendvpk COMMAND curl -T ${OUT_PATH}/${VPK_NAME} " ftp://\${PSVITAIP}:1337/ux0: ")
 add_dependencies(sendvpk VPK_${APP_NAME})
