--- a/deps/CMakeLists.txt
+++ b/deps/CMakeLists.txt
@@ -62,6 +62,7 @@ target_include_directories(rcheevos PRIVATE
     ${LIBRETRO_PATH}/include
 )
 target_compile_definitions(rcheevos PRIVATE RC_CLIENT_SUPPORTS_EXTERNAL RC_CLIENT_SUPPORTS_RAINTEGRATION)
+target_compile_options(rcheevos PRIVATE -Os)
 
 # vita2d
 # ----------------------
