--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -45,13 +45,20 @@ elseif(CORE IN_LIST MAME)
     set(ARC_DAT_NAME mame_dat.zbin)
 endif()
 
+add_compile_definitions(
+    RC_CLIENT_SUPPORTS_EXTERNAL
+    RC_CLIENT_SUPPORTS_RAINTEGRATION
+    RC_CLIENT_SUPPORTS_HASH)
+
 include_directories(
     ../frontend/source
     ../frontend/source/emu
+    ../frontend/source/ui
     ../frontend/source/audio
     ../frontend/source/core_spec
     ../deps/libretro-common/include
     ../deps/7-Zip/C
+    ../deps/rcheevos/include
     ../share/source)
 
 file(GLOB SRC ../frontend/source/core_spec/*.cpp)
