--- a/cores/CMakeLists.txt
+++ b/cores/CMakeLists.txt
@@ -25,6 +25,7 @@ elseif(CORE STREQUAL "snes9x2005_plus")
 elseif(CORE STREQUAL "snes9x2010")
 elseif(CORE STREQUAL "fceumm")
 elseif(CORE STREQUAL "nestopia")
+    set(CORE_DIR ${CORE_DIR}/libretro)
 elseif(CORE STREQUAL "genesis_plus_gx")
     set(CORE_MAKEFILE_NAME Makefile.libretro)
 elseif(CORE STREQUAL "genesis_plus_gx_wide")
@@ -72,6 +73,7 @@ elseif(CORE STREQUAL "chimerasnes")
     set(CORE_ARGS ${CORE_ARGS} USE_BLARGG_APU=1)
 elseif(CORE STREQUAL "tgbdual")
 elseif(CORE STREQUAL "nekop2")
+    set(CORE_DIR ${CORE_DIR}/libretro)
     set(CORE_MAKEFILE_NAME Makefile.libretro)
 elseif(CORE STREQUAL "fmsx")
 elseif(CORE STREQUAL "bluemsx")
