--- a/cores/CMakeLists.txt
+++ b/cores/CMakeLists.txt
@@ -14,10 +14,10 @@ elseif(CORE STREQUAL "fba_lite")
     set(CORE_MAKEFILE_NAME ${CMAKE_CURRENT_SOURCE_DIR}/../apps/${CORE}/makefile.libretro)
     set(CORE_ARGS ${CORE_ARGS} HAVE_NEON=1)
 elseif(CORE STREQUAL "fbneo")
-    set(CORE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/libretro-fbneo/src/burner/libretro)
+    set(CORE_DIR ${CORE_DIR}/src/burner/libretro)
     set(CORE_ARGS ${CORE_ARGS} STATIC_LINKING=1)
 elseif(CORE STREQUAL "fbalpha2012")
-    set(CORE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/fbalpha2012/svn-current/trunk)
+    set(CORE_DIR ${CORE_DIR}/svn-current/trunk)
     set(CORE_MAKEFILE_NAME ${CMAKE_CURRENT_SOURCE_DIR}/../apps/${CORE}/makefile.libretro)
 elseif(CORE STREQUAL "snes9x2002")
 elseif(CORE STREQUAL "snes9x2005_plus")
@@ -64,7 +64,7 @@ elseif(CORE STREQUAL "neocd")
 elseif(CORE STREQUAL "mednafen_supafaust")
     set(CORE_ARGS ${CORE_ARGS} USE_BLARGG_APU=1)
 elseif(CORE STREQUAL "km_fbneo_xtreme_amped")
-    set(CORE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/FBNeo-Xtreme-Amped/src/burner/libretro)
+    set(CORE_DIR ${CORE_DIR}/src/burner/libretro)
     set(CORE_MAKEFILE_NAME ${CMAKE_CURRENT_SOURCE_DIR}/../apps/${CORE}/Makefile)
     set(CORE_ARGS ${CORE_ARGS} STATIC_LINKING=1)
 elseif(CORE STREQUAL "km_mame2003_xtreme_amped")
@@ -79,7 +79,7 @@ elseif(CORE STREQUAL "fmsx")
 elseif(CORE STREQUAL "bluemsx")
     set(CORE_MAKEFILE_NAME Makefile.libretro)
 elseif(CORE STREQUAL "np2kai")
-    set(CORE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/NP2kai/sdl)
+    set(CORE_DIR ${CORE_DIR}/sdl)
     set(CORE_MAKEFILE_NAME Makefile.libretro)
 elseif(CORE STREQUAL "vice")
     set(LIBRETRO_LIBRARY ${CORE_DIR}/vice_x64_libretro_vita.a CACHE INTERNAL "LIBRETRO_LIBRARY")
