--- a/.gitmodules
+++ b/.gitmodules
@@ -208,3 +208,6 @@
 	path = deps/rcheevos
 	url = https://github.com/RetroAchievements/rcheevos.git
 	branch = master
+[submodule "cores/snes9x"]
+	path = cores/snes9x
+	url = https://github.com/libretro/snes9x.git
