--- a/cores/CMakeLists.txt
+++ b/cores/CMakeLists.txt
@@ -90,6 +90,9 @@ elseif(CORE STREQUAL "handy")
 elseif(CORE STREQUAL "cap32")
 elseif(CORE STREQUAL "crocods")
     set(CORE_MAKEFILE_NAME ${CMAKE_CURRENT_SOURCE_DIR}/../apps/${CORE}/Makefile)
+elseif(CORE STREQUAL "snes9x")
+    set(CORE_DIR ${CORE_DIR}/libretro)
+    set(CORE_MAKEFILE_NAME ${CMAKE_CURRENT_SOURCE_DIR}/../apps/${CORE}/Makefile)
 else()
     message(FATAL_ERROR "unknown core: " ${CORE})
 endif()
