--- a/cores/CMakeLists.txt
+++ b/cores/CMakeLists.txt
@@ -94,7 +94,7 @@ elseif(CORE STREQUAL "snes9x")
     set(CORE_DIR ${CORE_DIR}/libretro)
     set(CORE_MAKEFILE_NAME ${CMAKE_CURRENT_SOURCE_DIR}/../apps/${CORE}/Makefile)
 elseif(CORE STREQUAL "mgba")
-    set(CORE_MAKEFILE_NAME Makefile.libretro)
+    set(CORE_MAKEFILE_NAME ${CMAKE_CURRENT_SOURCE_DIR}/../apps/${CORE}/Makefile.libretro)
 else()
     message(FATAL_ERROR "unknown core: " ${CORE})
 endif()
