--- a/.gitmodules
+++ b/.gitmodules
@@ -207,3 +207,7 @@
 [submodule "cores/snes9x"]
 	path = cores/snes9x
 	url = https://github.com/libretro/snes9x.git
+[submodule "deps/minizip-ng"]
+	path = deps/minizip-ng
+	url = https://github.com/zlib-ng/minizip-ng.git
+	branch = develop
