--- a/cores/CMakeLists.txt
+++ b/cores/CMakeLists.txt
@@ -32,7 +32,7 @@ elseif(CORE STREQUAL "genesis_plus_gx_wide")
     set(CORE_MAKEFILE_NAME Makefile.libretro)
 elseif(CORE STREQUAL "picodrive")
     set(CORE_MAKEFILE_NAME Makefile.libretro)
-    set(CORE_MAKEFILE_NAME ${CMAKE_CURRENT_SOURCE_DIR}/../apps/${CORE}/Makefile.libretro)
+    set(CORE_ARGS ${CORE_ARGS} PLATFORM_ZLIB=0 use_libchdr=1)
 elseif(CORE STREQUAL "mednafen_pce_fast")
     set(CORE_MAKEFILE_NAME ${CMAKE_CURRENT_SOURCE_DIR}/../apps/${CORE}/Makefile)
     set(CORE_ARGS ${CORE_ARGS} SYSTEM_ZLIB=1)
