--- a/cores/CMakeLists.txt
+++ b/cores/CMakeLists.txt
@@ -15,6 +15,7 @@ elseif(CORE STREQUAL "fba_lite")
     set(CORE_ARGS ${CORE_ARGS} HAVE_NEON=1)
 elseif(CORE STREQUAL "fbneo")
     set(CORE_DIR ${CORE_DIR}/src/burner/libretro)
+    set(CORE_MAKEFILE_NAME ${CMAKE_CURRENT_SOURCE_DIR}/../apps/${CORE}/makefile)
     set(CORE_ARGS ${CORE_ARGS} STATIC_LINKING=1)
 elseif(CORE STREQUAL "fbalpha2012")
     set(CORE_DIR ${CORE_DIR}/svn-current/trunk)
