--- a/cores/CMakeLists.txt
+++ b/cores/CMakeLists.txt
@@ -100,6 +100,8 @@ elseif(CORE STREQUAL "snes9x")
     set(CORE_MAKEFILE_NAME ${CMAKE_CURRENT_SOURCE_DIR}/../apps/${CORE}/Makefile)
 elseif(CORE STREQUAL "mgba")
     set(CORE_MAKEFILE_NAME ${CMAKE_CURRENT_SOURCE_DIR}/../apps/${CORE}/Makefile.libretro)
+elseif(CORE STREQUAL "parallel_n64")
+    set(CORE_MAKEFILE_NAME ${CMAKE_CURRENT_SOURCE_DIR}/../apps/${CORE}/Makefile)
 else()
     message(FATAL_ERROR "unknown core: " ${CORE})
 endif()
